Refactor: - Matchs: renombre prestamista -> proveedor Features: - Security: endpoints solo en dev - Promedio de puntajes